--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+@media  (max-width: 1464px) {
+    h1{
+        font-size: 100px;
+        }
+        
+}
 body{
 overflow: hidden;
 width: 100%;
@@ -10,3 +16,4 @@ text-align: center;
 font-family: 'Righteous', cursive;
 font-size: 200px;
 }
+
